[tool.poetry]
name = "signinghub-api"
version = "0.1.0"
description = ""
authors = ["desertsniper87 <torshobuet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.2"
requests = "2.12.4"
urllib3 = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
